--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -26,8 +26,8 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+      - name: Upload artifacts to dist folder
+        uses: actions/upload-artifact@v4
         with:
           name: dist-files
           path: |
